# template-empty-python

./: .gitignore  README.md  install.py  makefile  pyproject.toml  requirements.txt  setup.cfg
src/empty-python/: __init__.py
tests/somemodule/: test_some_test_name.py
