[metadata]
name = example
version = 0.1.0
author = Nicolas Dao
author_email = nicolas.dao@gmail.com
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
keywords = one, two
license = BSD-3-Clause
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License

[options]
packages = find:
package_dir = 
	=src
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev = 
	build
	black
	twine
	flake8

[flake8]
extend-ignore = W191,E501,E302,E231,W291,E305,W391
exclude = .git,__pycache__,.venv,build,dist

